Fix colors, contrast and gradients

--- a/src/sass/partials/_projects.scss
+++ b/src/sass/partials/_projects.scss
@@ -18,7 +18,7 @@
 
 .project-outline {
   background: rgb(46,46,46);
-  background: linear-gradient(0deg, rgba(46,46,46,0.5) 25%, rgb(241, 241, 241) 100%);
+  background: linear-gradient(0deg, rgba(73, 73, 73, 0.7) 25%, rgb(207, 207, 207) 100%);
   padding: 1px;
   border-radius: 20px;
   filter: drop-shadow(2px 2px 5px black)
@@ -26,7 +26,7 @@
 
 .project-container {
   background: rgb(4,4,4);
-  background: linear-gradient(135deg, rgba(4,4,4,1) 0%, rgb(15, 15, 15) 100%);
+  background: linear-gradient(135deg, rgb(5, 5, 5) 0%, rgb(34, 34, 34) 100%);
   padding: 1.5rem;
   border-radius: 20px;
 }
@@ -63,8 +63,7 @@
 }
 
 .project:hover .preview-image, .preview-group:hover .preview-image {
-  filter: saturate(60%) brightness(50%) blur(1px);
-
+  filter: saturate(60%) brightness(75%) blur(1px);
 }
 
 .lower-group {
@@ -85,9 +84,11 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100px;
   gap: 0.1rem;
   background-color: $accent;
   border-radius: 5px;
+  transition: 250ms;
 
   img {
     height: 1rem;
@@ -97,6 +98,7 @@ button {
 
 button:hover {
   cursor: pointer;
+  background-color: rgb(185, 125, 14)
 }
 
 .preview-group {
